--- a/basic/package.json
+++ b/basic/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^5.3.1",
+    "mongoose": "^5.9.22",
     "nodemon": "^2.0.4"
   }
 }
